--- a/index.html
+++ b/index.html
@@ -22,39 +22,68 @@
             </nav>
     </header>
     <main>
-        <section>
+        <section class="info">
             <h2 class="header">Acerca de</h2>
             <p class="intro">
-            Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
-            cosas lindas para la web 😍 Después de estudiar comunicación social y
-            ciencia política en la universidad, trabajé varios años en mercadeo
-            digital hasta que aprendí a programar. Llevo un poco más de tres años
-            enfocándome en front end, específicamente en JavaScript y accesibilidad.
-            Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
-            algunos de mis proyectos recientes y también puedes contactarme por si
-            quieres hablar de tecnología, accesibilidad o gatos!</p>
+            Hola! Soy Kevin, soy mexicano, me gusta el mundo de la tecnología
+            y la ciencia. Actualmente estoy estudiando la Ingeniería en Tecnologías
+            de la Información en la Universidad Politécnica de Tlaxcala. Mi primer
+            trabajo en el mundo de la tecnología fue como teste en la aplicación de eseety
+            Llevo un año enfocandome en front end, específicamente en JavaScript y React.
+            Aquí puedes ver algunos de mis proyectos recientes y también puedes contactarme por si
+            quieres hablar de tecnología, accesibilidad o ciencia!</p>
             <ul class="social-media">
               <li>
-                <a href="https://twitter.com/gmzjuliana" target="#"
+                <a href="https://twitter.com/Jiokso" target="#"
                   ><img src="./img/twitter.png" alt="Twitter"
                 />
                  <p class="social-link-text">Twitter</p>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/gmzjuliana" target="#"
+                <a href="https://github.com/KevJim" target="#"
                   ><img src="./img/github-logo.png" alt="GitHub"
                 />
                 <p class="social-link-text">GitHub</p></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/gomezjuliana/" target="#"
+                <a href="https://linkedin.com/in/kevinjiménezosorno" target="#"
                   ><img src="./img/linkedin.png" alt="LinkedIn"
                 />
                 <p class="social-link-text">LinkedIn</p></a>
               </li>
             </ul>
           </section>
+          <section  id="proyects" class="main-proyects-container">
+            <div class="proyects--title">
+                <h2>Proyectos</h2>
+            </div>
+            <section class="proyects-container--slider">
+                <article class="proyects-container--card">
+                    <p class="recommended">Proyecto 1</p>
+                    <button class="proyects-card--ca">Ir al proyecto <span></span></button>
+                </article>
+                <article class="proyects-container--card">
+                    <p class="recommended">Proyecto 2</p>
+                    <button class="proyects-card--ca">Ir al proyecto <span></span></button>
+                </article>
+                <article class="proyects-container--card">
+                    <p class="recommended">Proyecto 2</p>
+                    <button class="proyects-card--ca">Ir al proyecto <span></span></button>
+                </article>
+            </section>
     </main>
+    <footer class="contact-section">
+        <h2 class="header">Contacto</h2>
+        <p class="intro">Para manderme un mensaje puedes usar el formulario que sigue</p>
+        <form class="form-container">
+          <label class="form-label">Nombre</label><input type="text" aria-label="nombre" id="name"/> 
+          <span id="name-error" aria-live="assertive"></span>
+          <br />
+          <label class="form-label">Correo</label><input type="text" aria-label="correo"/> <br />
+          <label class="message-input">Mensaje<input type="text" /> <br /></label>
+          <button class="send-button">Enviar</button>
+        </form>
+      </footer>
 </body>
 </html>
