Se cambio la foto de perfil y se justifico el texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-            <img src="./img/Foto_Perfil.jpg" alt="Foto_Kevin" class="header-img"/>
+            <img src="./img/perfil2.jpg" alt="Foto_Kevin" class="header-img"/>
             <h1 class="header">Kevin Jiménez</h1>
             <h2 class="subtitle">Front End Developer</h2>
             <nav>
