Se agrego la primer imagen del proyecto

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             </div>
             <section class="proyects-container--slider">
                 <article class="proyects-container--card">
-                    <p class="recommended">Proyecto 1</p>
-                    <button class="proyects-card--ca">Ir al proyecto <span></span></button>
+                    <p class="recommended">Landing Page</p>
+                    <button class="proyects-card--ca">Ir al proyecto<span></span></button>
                 </article>
                 <article class="proyects-container--card">
                     <p class="recommended">Proyecto 2</p>
