--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)">
 </head>
 <body>
     <header>
@@ -61,15 +62,15 @@
             <section class="proyects-container--slider">
                 <article class="proyects-container--card">
                     <p class="recommended">Landing Page</p>
-                    <button class="proyects-card--ca">Ir al proyecto<span></span></button>
+                    <button class="proyects-card--ca">Ir al proyecto</button>
                 </article>
                 <article class="proyects-container--card">
                     <p class="recommended">Proyecto 2</p>
-                    <button class="proyects-card--ca">Ir al proyecto <span></span></button>
+                    <button class="proyects-card--ca">Ir al proyecto</button>
                 </article>
                 <article class="proyects-container--card">
                     <p class="recommended">Proyecto 2</p>
-                    <button class="proyects-card--ca">Ir al proyecto <span></span></button>
+                    <button class="proyects-card--ca">Ir al proyecto</button>
                 </article>
             </section>
     </main>
@@ -86,14 +87,6 @@
         </form>
     </footer>
     <div class="notification" aria-live="assertive"></div>
-    <div class="modal-container">
-      <div class="modal">
-        <h2 class="header" id="modal-header" tabindex="0">Ejemplo de un proyecto mio</h2>
-        <img src="images/project1.png" class="modal-project-image" alt="un pantallazo de mi project"/>
-        <button class="modal-button">Cerrar</button>
-      </div>
-    </div>
-
-    <script src="final.js" type="text/javascript"></script>
+    <script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
