--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">¿Quién Soy?</a></li>
 							<li><a href="#one">Proyectos</a></li>
-							<li><a href="#two">Tecnologías</a></li>
+							<li><a href="#two">Skills</a></li>
 							<li><a href="#three">Contacto</a></li>
 						</ul>
 					</nav>
@@ -35,9 +35,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hola, Soy Kevin Jiménez, <span style="color: #32e0c4;">Frontend Developer</span> con ganas de seguir aprendiendo</h1>
-							<p style="font-style: italic;">"Los mejores educadores son los que inspiran a sus alumnos"
+							<p style="font-style: italic;">"No quiero creer, quiero saber"
 								<br>
-								-Neil deGrasse Tyson
+								- Carl Sagan
 							</p>
 
 							<ul class="actions">
@@ -52,10 +52,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Proyecto Batatabit</h2>
+									<p>Creación de una landing page usando un diseño responsive</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://kevjim.github.io/batatabit/" class="button">Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
@@ -64,22 +64,12 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>PelisTendencia</h2>
+									<p>Creación de una SPA usando VanillaJS, haciendo llamado a una API de peliculas para mostrar
+										las que se encuentran en tendencia.
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://kevjim.github.io/PelisTendencia/" class="button">Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
@@ -89,39 +79,24 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Skills</h2>
+							<p>Aqui podras ver las skills que manejo al momento, pero no dudes que en el futuro pueden ir aumentando</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span><img src="./images/html-5.png" alt="Logo_HTML" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>HTML 5</h3>
+									<p>HTML 5 es la quinta revisión importante del lenguaje básico de la World Wide Web, HTML.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span><img src="./images/css-3.png" alt="Logo_HTML" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>CSS 3</h3>
+									<p>CSS3 es una tecnología que ha tenido una evolución en el tiempo, que actualmente se encuentra en su versión 3, como su propio nombre indica. Sus siglas corresponden a “Cascading Style Sheets”</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+									<span><img src="./images/javascript.png" alt="Logo_HTML" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>JavaScript</h3>
+									<p>JavaScript es un lenguaje de programación interpretado, dialecto del estándar ECMAScript.</p>
+								</section>								
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
@@ -135,7 +110,7 @@
 							<h2>Pongamonos en contacto</h2>
 							<p>Puedes contactarme por si quieres hablar de tecnología, educación o ciencia!</p>
 							<div class="split style1">
-								<section>
+								<!-- <section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
@@ -152,10 +127,10 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Enviar</a></li>
+											<li><a href="#" class="button submit">Enviar</a></li>
 										</ul>
 									</form>
-								</section>
+								</section> -->
 								<section>
 									<ul class="contact">
 										<li>
@@ -183,7 +158,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a><li>Modify by: Kevin Jiménez</li></li>
 					</ul>
 				</div>
 			</footer>
