Se quito el correo electronico y se agrego 2 skills mas

--- a/index.html
+++ b/index.html
@@ -88,19 +88,26 @@
 									<p>HTML 5 es la quinta revisión importante del lenguaje básico de la World Wide Web, HTML.</p>
 								</section>
 								<section>
-									<span><img src="./images/css-3.png" alt="Logo_HTML" style="width: 40px; margin-bottom: 10px;"></span>
+									<span><img src="./images/css-3.png" alt="Logo_CSS" style="width: 40px; margin-bottom: 10px;"></span>
 									<h3>CSS 3</h3>
 									<p>CSS3 es una tecnología que ha tenido una evolución en el tiempo, que actualmente se encuentra en su versión 3, como su propio nombre indica. Sus siglas corresponden a “Cascading Style Sheets”</p>
 								</section>
 								<section>
-									<span><img src="./images/javascript.png" alt="Logo_HTML" style="width: 40px; margin-bottom: 10px;"></span>
+									<span><img src="./images/javascript.png" alt="Logo_JavaScript" style="width: 40px; margin-bottom: 10px;"></span>
 									<h3>JavaScript</h3>
 									<p>JavaScript es un lenguaje de programación interpretado, dialecto del estándar ECMAScript.</p>
-								</section>								
+								</section>		
+								<section>
+									<span><img src="./images/logotipo-de-git.png" alt="Logo_Git" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>Git</h3>
+									<p>Git es un software de control de versiones diseñado por Linus Torvalds, pensando en la eficiencia, la confiabilidad y compatibilidad del mantenimiento de versiones de aplicaciones cuando éstas tienen un gran número de archivos de código fuente.</p>
+								</section>
+								<section>
+									<span><img src="./images/silueta-del-logo-de-github-en-un-cuadrado.png" alt="Logo_Github" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>GitHub</h3>
+									<p>GitHub es una forja para alojar proyectos utilizando el sistema de control de versiones Git.</p>
+								</section>					
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -133,10 +140,6 @@
 								</section> -->
 								<section>
 									<ul class="contact">
-										<li>
-											<h3>Email</h3>
-											<span>ji.oso.kev@gmail.com</span>
-										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
