Se optimizaron las imagenes y se agrego un nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Proyecto Batatabit</h2>
-									<p>Creación de una landing page usando un diseño responsive</p>
+									<p>Creación de una landing page responsive usando HTML y CSS</p>
 									<ul class="actions">
 										<li><a href="https://kevjim.github.io/batatabit/" class="button">Ve al proyecto</a></li>
 									</ul>
@@ -66,10 +66,24 @@
 								<div class="inner">
 									<h2>PelisTendencia</h2>
 									<p>Creación de una SPA usando VanillaJS, haciendo llamado a una API de peliculas para mostrar
-										las que se encuentran en tendencia.
+										las que se encuentran en tendencia. Usando HTML, CSS y JavaScript
 									</p>
 									<ul class="actions">
 										<li><a href="https://kevjim.github.io/PelisTendencia/" class="button">Ve al proyecto</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>jsrickandmortykevin</h2>
+									<p>Aplicacion que genera personajes aleatorios de Rick y Morty haciendo llamado a una API
+										usando tecnologías como HTML, CSS, JavaScript y Webpack
+									</p>
+									<ul class="actions">
+										<li><a href="https://jsrickandmortykevin.netlify.app/" class="button">Ve al proyecto</a></li>
 									</ul>
 								</div>
 							</div>
@@ -106,6 +120,11 @@
 									<span><img src="./images/silueta-del-logo-de-github-en-un-cuadrado.png" alt="Logo_Github" style="width: 40px; margin-bottom: 10px;"></span>
 									<h3>GitHub</h3>
 									<p>GitHub es una forja para alojar proyectos utilizando el sistema de control de versiones Git.</p>
+								</section>	
+								<section>
+									<span><img src="./images/icon-square-big.png" alt="Logo_Webpack" style="width: 40px; margin-bottom: 10px;"></span>
+									<h3>Webpack</h3>
+									<p>webpack es un paquete de módulos de JavaScript de código abierto. Está hecho principalmente para JavaScript, ​​​​​ pero puede transformar activos de front-end como HTML, CSS e imágenes.</p>
 								</section>					
 							</div>
 						</div>
