Se agrego el proyecto del clima

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic04.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>App del Clima</h2>
+									<p>Aplicacion que consulta el clima de cada Ciudad en Ingles, Creada con HTML, CSS y VanillaJS usando webpack con deploy en netlify
+									</p>
+									<ul class="actions">
+										<li><a href="https://elclimakevin.netlify.app/" class="button">Ve al proyecto</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
 				<!-- Two -->
